# performance_rnn_torch

./: .gitignore  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  README.md  STRUCTURE_CLEANUP.md  __init__.py  adversarial.py  config.py  data.py  early_stopping.py  environment-cpu.yml  environment-cuda.yml  environment-dev.yml  environment-mps.yml  generate.py  model.py  optimizer.py  play.py  preprocess.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_dimensions.py  train.py  utils.py  verify_dimensions.py
dataset/scripts/: maestro_parser.py
performance_rnn_torch/: __init__.py  config.py  data.py  generate.py  optimization_routine.py  optimizer.py  preprocess.py  sequence.py  train.py  utils.py
performance_rnn_torch/core/: __init__.py  data.py  model.py  sequence.py
performance_rnn_torch/dataset/scripts/: maestro_parser.py
performance_rnn_torch/runs/Apr10_16-28-24_new-host-6.local/: events.out.tfevents.1744295304.new-host-6.local.58425.0
performance_rnn_torch/runs/Apr10_18-04-17_new-host-6.local/: events.out.tfevents.1744301057.new-host-6.local.1638.0
performance_rnn_torch/runs/Jan05_16-03-53_MacBook-Pro-di-Alessandro.local/: events.out.tfevents.1704467033.MacBook-Pro-di-Alessandro.local.26000.0
performance_rnn_torch/runs/May02_11-22-42_MacBook-Pro-di-Alessandro.local/: events.out.tfevents.1746177762.MacBook-Pro-di-Alessandro.local.84906.0
performance_rnn_torch/runs/May02_17-29-04_MacBook-Pro-di-Alessandro.local/: events.out.tfevents.1746199744.MacBook-Pro-di-Alessandro.local.89551.0
performance_rnn_torch/training/: __init__.py  early_stopping.py  trainer.py
performance_rnn_torch/utils/: __init__.py  helpers.py  logger.py  paths.py
scripts/: generate.py  optimization_routine.py  prepare_data.py  preprocess.py  train.py  train.py.bak
