[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "performance_rnn_torch"
dynamic = ["version"]
description = "PyTorch implementation of Google's Performance RNN for expressive piano generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alessandro Anatrini", email = "alessandro.anatrini@hfmt-hamburg.de"}
]
keywords = ["music generation", "deep learning", "rnn", "midi", "pytorch", "performance-rnn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.0.0",
    "pretty_midi>=0.2.9",
    "tqdm>=4.60.0",
    "tensorboard>=2.10.0",
    "optuna>=3.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "pre-commit>=2.17.0",
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
]

[project.urls]
Homepage = "https://github.com/anatrini/performance_rnn_torch"
Repository = "https://github.com/anatrini/performance_rnn_torch"
Issues = "https://github.com/anatrini/performance_rnn_torch/issues"

[project.scripts]
performance-rnn-train = "scripts.train:main"
performance-rnn-generate = "scripts.generate:main"
performance-rnn-preprocess = "scripts.preprocess:main"
performance-rnn-optimize = "scripts.optimization_routine:main"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | performance_rnn_torch/dataset
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["performance_rnn_torch/dataset"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=performance_rnn_torch",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pretty_midi.*", "torch.*", "tensorboard.*", "optuna.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["performance_rnn_torch"]
omit = [
    "*/tests/*",
    "*/dataset/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
